Add support of DAV operations and 2-way sync from RC and NC
!Warning! Except for calendar deletion from NC because I've no clue now how to do this without coding on the NC side

--- a/config.inc.php.dist
+++ b/config.inc.php.dist
@@ -40,7 +40,7 @@ $config['calendar_sync_period'] = "600";
 $config['calendar_default_calendar'] = 'Personal';
 
 // show a birthdays calendar from the user's address book(s)
-$config['calendar_contact_birthdays'] = false;	// TODO - DO NOT CHECK BOX IN RC SETTINGS - Instead, let NC generate the bday calendar and it will show up.
+$config['calendar_contact_birthdays'] = false;	// TODO
 
 
 // mapping of Roundcube date formats to calendar formats (long/short/agenda)
@@ -178,6 +178,7 @@ $config['kolab_invitation_calendars'] = false;
 // %u - Current webmail user name
 // %n - Calendar name
 // %i - Calendar UUID
+// %l - Current webmail user local part of name
 // $config['calendar_caldav_url'] = 'http://%h/iRony/calendars/%u/%i';
 
 // Driver to provide a resource directory ('ldap' is the only implementation yet).
@@ -228,13 +229,13 @@ $config['calendar_ical_debug'] = false;
 // Pre-installed calendars, added at first access to calendar section
 // Caldav driver is supported only
  $config['calendar_preinstalled_calendars'] = array(
-    'Nextcloud' => array(
-                    'driver'       		=> 'caldav',
-					'name'         		=> '',
-                    'caldav_user'  		=> '%u',
-                    'caldav_pass'  		=> '%p',
-					'caldav_auth_type'  => 'basic', // Authentication choices are 'basic' or 'digest'
-                    'caldav_url'   		=> 'https://%h/nextcloud/remote.php/dav/calendars/%u/',
-					'color' 	   		=>  '', // Can specify color using hex or leave blank for auto color
-                    'showAlarms'   		=> 1));
+    0 => array(
+                    'driver'       => 'caldav',
+                    'name'         => '',
+                    'caldav_user'  => '%l',
+                    'caldav_pass'  => '%p',
+                    'caldav_url'   => 'https://%h/remote.php/dav/calendars/%l/', //specify host URL instead of %h if nextcloud is on the other host
+                    'color' 	   =>  '',
+                    'showAlarms'   => 1));
+
 ?>
