--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,10 @@
 {
-	"name": "texxasrulez/calendar",
+	"name": "cociweb/calendar",
 	"type": "roundcube-plugin",
 	"description": "CalDav Capable Calendar plugin for Roundcube and Nextcloud",
-	"homepage": "https://github.com/texxasrulez/calendar",
+	"homepage": "https://github.com/cociweb/calendar",
 	"license": "GPL-3.0",
-	"version": "dev",
+	"version": "0.0.8.3",
 	"authors": [
 		{
 			"name": "Gene Hawkins",
